# src/controllers/payment.controller.js
@@ -2,20 +2,19 @@ const paymentService = require('../services/payment.service');
 const asyncHandler = require('../utils/asyncHandler');
 
 exports.create = asyncHandler(async (req, res) => {
-  const ip = req.headers['x-forwarded-for'] || req.socket.remoteAddress;
-  const data = await paymentService.createPayment(req.params.orderId, req.user._id, req.body, ip);
+  const data = await paymentService.createPayment(req.params.orderId, req.user._id, req.body);
   res.json({ success: true, data });
 });
 
-exports.vnpayCallback = asyncHandler(async (req, res) => {
-  const data = await paymentService.handleVNPayCallback(req.query);
+exports.momoCallback = asyncHandler(async (req, res) => {
+  const data = await paymentService.handleMoMoCallback(req.query);
   const redirect = `${process.env.CLIENT_URL}/payment-result?success=${data.success}`;
   res.redirect(redirect);
 });
 
-exports.vnpayIpn = asyncHandler(async (req, res) => {
-  const data = await paymentService.handleVNPayCallback(req.query);
-  res.status(200).json({ RspCode: data.success ? '00' : '99', Message: 'Confirm Success' });
+exports.momoIpn = asyncHandler(async (req, res) => {
+  const data = await paymentService.handleMoMoCallback(req.body);
+  res.status(200).json({ resultCode: data.success ? 0 : 1, message: 'ok' });
 });
 
 exports.confirmCOD = asyncHandler(async (req, res) => {
